feat: validate blockchain fetch from DNS server with local state (#6658)
Description
---
Add new service which will periodically get checkpoints from a DNS
server and validate with it's own state. If we fail this check we will
include this information in `get_new_block_template` request so the
sender is aware that this node is out of sync.

Motivation and Context
---
This will allow miners including one from Tari Universe to avoid mining
on the orphan chain. This implementation is
modeled after the [Monero
Pulse](https://docs.getmonero.org/infrastructure/monero-pulse/#moneropulse)

How Has This Been Tested?
---
Run app on the nextnet and look for logs with `tari_pulse` in the
`base_layer.log` file like this:
`tail -f base_layer.log | grep tari_pulse `

Make `get_new_block_template`  and verify if new fields are present.

Create orphan chain (eg. by turning off tor and banning all TCP peers)
and check (with above methods) if nodes detects orphan chain.

What process can a PR reviewer use to test or verify this change?
---
Same as above


Breaking Changes
---

- [x] None
- [ ] Requires data directory on base node to be deleted
- [ ] Requires hard fork
- [ ] Other - Please specify

---------

Co-authored-by: SW van Heerden <swvheerden@gmail.com>

--- a/common/config/presets/c_base_node_c.toml
+++ b/common/config/presets/c_base_node_c.toml
@@ -45,6 +45,9 @@
 # Obscure GRPC error responses (default = false)
 #report_grpc_error = false
 
+# Interval between each request to the dns server for hte checkpoints to compare it with the local blockchain (default = 120 s)
+# tari_pulse_interval = 120
+
 [base_node.lmdb]
 #init_size_bytes = 16_777_216 # 16 *1024 * 1024
 #grow_size_bytes = 16_777_216 # 16 *1024 * 1024
