--- a/base_layer/core/Cargo.toml
+++ b/base_layer/core/Cargo.toml
@@ -93,6 +93,8 @@ tiny-keccak = { package = "tari-tiny-keccak", version = "2.0.2", features = [
     "keccak",
 ] }
 dirs-next = "1.0.2"
+hickory-client = { version = "0.25.0-alpha.2", features = ["dns-over-rustls", "dnssec-openssl"] }
+anyhow = "1.0.53"
 
 [dev-dependencies]
 criterion = { version = "0.4.0" }
