chore: enable static linking of openssl dependency (#6708)
Description
---
Enabled static linking of `openssl` dependencies by specifying
`vendored` feature where applicable.

Motivation and Context
---
A recent change introduced a build and runtime dependency on openssl in
Windows - this PR removes that dependency by statically linking openssl.

How Has This Been Tested?
---
System-level testing - queries to the DNS and Tari Pulse resolves.
```
2024-11-28 16:51:17.816247200 [p2p::initialization] DEBUG Found 9 peer(s) from `seeds.nextnet.tari.com` in 39ms
```
```
2024-11-28 16:51:17.861283000 [c::bn::tari_pulse] INFO  Tari Pulse Service initialized with DNS name: checkpoints-nextnet.tari.com
2024-11-28 16:51:18.087188200 [c::bn::tari_pulse] TRACE Passed checkpoints: true, DNS: (45168, 1e3c56468f464072d9879e29a70891e9916f2206116c8819637c266a8b1d2efa), Local: (45168, 1e3c56468f464072d9879e29a70891e9916f2206116c8819637c266a8b1d2efa)
```

What process can a PR reviewer use to test or verify this change?
---
Code review

<!-- Checklist -->
<!-- 1. Is the title of your PR in the form that would make nice release
notes? The title, excluding the conventional commit
tag, will be included exactly as is in the CHANGELOG, so please think
about it carefully. -->


Breaking Changes
---

- [x] None
- [ ] Requires data directory on base node to be deleted
- [ ] Requires hard fork
- [ ] Other - Please specify

<!-- Does this include a breaking change? If so, include this line as a
footer -->
<!-- BREAKING CHANGE: Description what the user should do, e.g. delete a
database, resync the chain -->

--- a/base_layer/core/Cargo.toml
+++ b/base_layer/core/Cargo.toml
@@ -94,7 +94,11 @@ tiny-keccak = { package = "tari-tiny-keccak", version = "2.0.2", features = [
     "keccak",
 ] }
 dirs-next = "1.0.2"
-hickory-client = { version = "0.25.0-alpha.2", features = ["dns-over-rustls", "dnssec-openssl"], optional = true }
+hickory-client = { version = "0.25.0-alpha.2", features = [
+    "dns-over-native-tls",
+    "dnssec-openssl"
+], optional = true }
+openssl = { version = "0.10.66", features = ["vendored"] }
 anyhow = "1.0.53"
 
 [dev-dependencies]
@@ -126,3 +130,9 @@ unexpected_cfgs = { level = "warn", check-cfg = [
     'cfg(tari_target_network_nextnet)',
     'cfg(tari_target_network_testnet)',
 ] }
+
+[package.metadata.cargo-machete]
+openssl = [
+    # We need to specify extra features for openssl even though it is not used directly in this crate
+    "openssl",
+]
