--- a/applications/minotari_console_wallet/Cargo.toml
+++ b/applications/minotari_console_wallet/Cargo.toml
@@ -58,7 +58,7 @@ log4rs = { version = "1.3.0", default-features = false, features = [
 qrcode = { version = "0.12" }
 rand = "0.8"
 regex = "1.5.4"
-reqwest = { version =  "0.11.18", features = ["native-tls-vendored"] }
+reqwest = "0.11.18"
 rpassword = "5.0"
 rustyline = "9.0"
 serde = "1.0.136"
