--- a/applications/minotari_miner/Cargo.toml
+++ b/applications/minotari_miner/Cargo.toml
@@ -41,7 +41,7 @@ log4rs = { version = "1.3.0", default-features = false, features = [
     "size_trigger",
     "fixed_window_roller",
 ] }
-native-tls = { version = "0.2", features = ["vendored"] }
+native-tls = "0.2"
 num_cpus = "1.13"
 rand = "0.8"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
