--- a/base_layer/core/Cargo.toml
+++ b/base_layer/core/Cargo.toml
@@ -94,11 +94,7 @@ tiny-keccak = { package = "tari-tiny-keccak", version = "2.0.2", features = [
     "keccak",
 ] }
 dirs-next = "1.0.2"
-hickory-client = { version = "0.25.0-alpha.2", features = [
-    "dns-over-native-tls",
-    "dnssec-openssl"
-], optional = true }
-openssl = { version = "0.10.66", features = ["vendored"] }
+hickory-client = { version = "0.25.0-alpha.2", features = ["dns-over-rustls", "dnssec-openssl"], optional = true }
 anyhow = "1.0.53"
 
 [dev-dependencies]
@@ -130,9 +126,3 @@ unexpected_cfgs = { level = "warn", check-cfg = [
     'cfg(tari_target_network_nextnet)',
     'cfg(tari_target_network_testnet)',
 ] }
-
-[package.metadata.cargo-machete]
-openssl = [
-    # We need to specify extra features for openssl even though it is not used directly in this crate
-    "openssl",
-]
