--- a/base_layer/p2p/Cargo.toml
+++ b/base_layer/p2p/Cargo.toml
@@ -64,4 +64,4 @@ test-mocks = []
 auto-update = ["reqwest/default", "pgp", "semver"]
 
 [package.metadata.cargo-machete]
-ignored = ["hickory-proto"]
+ignored = ["hickory-proto"] #fix hickory-proto version to same alpha.2
