--- a/base_layer/core/Cargo.toml
+++ b/base_layer/core/Cargo.toml
@@ -113,6 +113,7 @@ tempfile = "3.1.0"
 toml = { version = "0.5" }
 quickcheck = "1.0"
 serial_test = "0.5"
+static_assertions = "1.1.0"
 
 [build-dependencies]
 tari_common = { path = "../../common", features = [
